// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewAccountsDashbard Should display empty data 1`] = `
<div>
  <table
    class="MuiTable-root MuiTable-stickyHeader css-xn82ks-MuiTable-root"
  >
    <thead
      class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Id
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Nombre de cuenta
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Tipo de Cuenta
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
    />
  </table>
</div>
`;

exports[`ViewAccountsDashbard Should display the Loading Message 1`] = `
<div>
  <span>
    Loading data...
  </span>
</div>
`;

exports[`ViewAccountsDashbard Should display the data 1`] = `
<div>
  <table
    class="MuiTable-root MuiTable-stickyHeader css-xn82ks-MuiTable-root"
  >
    <thead
      class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Id
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Nombre de cuenta
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-y8ay40-MuiTableCell-root"
          scope="col"
        >
          Tipo de Cuenta
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-hover css-1q1u3t4-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ex1afd-MuiTableCell-root"
        >
          SomeId
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ex1afd-MuiTableCell-root"
        >
          A title
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1ex1afd-MuiTableCell-root"
        >
          Entry
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ViewAccountsDashbard Should display the error message 1`] = `
<div>
  <span>
    Something went wrong
  </span>
</div>
`;
